--- a/components/dashboard/BabyTodayCard/BabyTodayCard.module.css
+++ b/components/dashboard/BabyTodayCard/BabyTodayCard.module.css
@@ -13,6 +13,7 @@
   line-height: 140%;
   letter-spacing: 0.01em;
   color: var(--color-scheme-text);
+  margin-bottom: 16px;
 }
 .top {
   display: flex;
@@ -21,14 +22,21 @@
 }
 
 .imageWrapper {
+  position: relative;        
+  width: 257px;
+  height: 194px;     
   border: 1px solid var(--color-scheme-border);
   border-radius: 24px;
   max-width: 287px;
-  height: auto;
-  margin: 16px 16px;
+  /* height: auto; */
   overflow: hidden;
+  flex-shrink: 0;
+  margin-bottom: 16px;
 }
 
+.image {
+  object-fit: cover;     
+}
 .row {
   margin: 0;
   line-height: 150%;
@@ -70,7 +78,6 @@
     margin-top: 32px;
   }
   .imageWrapper {
-    max-width: 257px;
     position: relative;
   }
   .top {
@@ -86,6 +93,7 @@
     margin: 0;
     text-align: center;
   }
+
 }
 
 @media (min-width: 1440px) {
@@ -96,7 +104,6 @@
   }
 
   .imageWrapper {
-    max-width: 257px;
     position: relative;
   }
   .size {
@@ -120,4 +127,23 @@
     height: 100%;
     overflow-y: auto;
   }
+
+.content::-webkit-scrollbar {
+  width: 8px;
+}
+
+.content::-webkit-scrollbar-track {
+  background: #f7dfe3; 
+  border-radius: 8px;
+}
+
+.content::-webkit-scrollbar-thumb {
+  background-color: #f2b6c1; 
+  border-radius: 8px;
+}
+
+.content::-webkit-scrollbar-thumb:hover {
+  background-color: #e89aaa;
+}
+
 }
