--- a/components/dashboard/MomTipCard/MomTipCard.module.css
+++ b/components/dashboard/MomTipCard/MomTipCard.module.css
@@ -52,4 +52,21 @@
     height: 100%;
     overflow-y: auto;
   }
+
+.content::-webkit-scrollbar {
+  width: 8px;
+}
+.content::-webkit-scrollbar-track {
+  background: #f7dfe3; 
+  border-radius: 8px;
+}
+
+.content::-webkit-scrollbar-thumb {
+  background-color: #f2b6c1; 
+  border-radius: 8px;
+}
+
+.content::-webkit-scrollbar-thumb:hover {
+  background-color: #e89aaa;
+}
 }
