--- a/components/profile/ProfileEditForm/ProfileEditForm.module.css
+++ b/components/profile/ProfileEditForm/ProfileEditForm.module.css
@@ -17,6 +17,12 @@
   margin-bottom: 24px;
 }
 
+.error {
+color: #c60000;
+}
+
+
+
 /* =========================
    TEXT INPUTS
 ========================= */
@@ -109,10 +115,10 @@
 }
 
 .saveChanges {
+  font-family: "Lato", sans-serif;
   width: 159px;
   height: 38px;
   padding: 8px 20px;
-
   border-radius: 100px;
   border-bottom: 4px solid var(--color-scheme-accent);
   background: var(--color-scheme-foreground-alt);
@@ -132,8 +138,14 @@
   border-bottom-width: 2px;
 }
 
+.saveChanges:disabled {
+  opacity: 0.5;
+  cursor: not-allowed;
+}
+
 .undoChanges {
-  width: 159px;
+  font-family: "Lato", sans-serif;
+  width: 162px;
   height: 38px;
   padding: 8px 20px;
 
@@ -203,9 +215,37 @@
     width: 580px;
   }
 
-  .buttonContainer {
-    display: flex;
-    gap: 16px;
-    justify-content: flex-end;
-  }
+}
+
+
+
+.fieldError {
+border: 1px solid #c60000;
+color: #c60000;
+}
+
+
+/* MODAL  */
+.modalPosition {
+padding: 64px 32px;
+display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: center;
+gap: 48px;
+}
+
+.modalText {
+font-family: "Comfortaa", sans-serif;
+font-weight: 700;
+font-size: 36px;
+line-height: 120%;
+letter-spacing: 0.01em;
+text-align: center;
+color: #000;
+
+}
+.modalActions {
+display: flex;
+gap: 16px;
 }
