--- a/components/common/ConfirmationModal/ConfirmationModal.module.css
+++ b/components/common/ConfirmationModal/ConfirmationModal.module.css
@@ -21,7 +21,7 @@
 
   font-family: var(--second-family);
   font-weight: 700;
-  font-size: 32px;
+  font-size: 36px;
   line-height: 1.4;
   letter-spacing: 0.01em;
   text-align: center;
@@ -53,7 +53,6 @@
   }
 
   .title {
-    font-size: 48px;
     line-height: 1.2;
   }
 
@@ -77,5 +76,10 @@
 
     --modal-close-top: 25px;
     --modal-close-right: 32px;
+  }
+
+  .title {
+    font-size: 48px;
+    line-height: 1.2;
   }
 }
