--- a/components/diary/AddDiaryEntryForm/AddDiaryEntryForm.module.css
+++ b/components/diary/AddDiaryEntryForm/AddDiaryEntryForm.module.css
@@ -69,7 +69,7 @@
   min-height: 250px;
   padding: 10px 12px;
   resize: none;
-  overflow: hidden;
+  overflow: auto;
   background-color: var(--opacity-neutral-darkest-5);
 }
 
@@ -240,14 +240,12 @@
 /* === КНОПКА === */
 .saveBtn {
   width: 100%;
-  margin-top: 0;
-  margin-bottom: 10px;
+  margin: 0 auto;
 }
 
 @media (min-width: 768px) {
   .saveBtn {
     width: 268px;
-    margin: 0 auto;
   }
 }
 
