--- a/components/dashboard/DashboardMainClient/DashboardMainClient.module.css
+++ b/components/dashboard/DashboardMainClient/DashboardMainClient.module.css
@@ -14,7 +14,7 @@
   flex-direction: column;
   max-width: 375px;
   align-items: center;
-  margin: 0 auto;
+  margin: 0 auto 32px auto;
 
   @media only screen and (min-width: 768px) {
     max-width: 768px;
