--- a/components/tasks/TaskItem/TaskItem.module.css
+++ b/components/tasks/TaskItem/TaskItem.module.css
@@ -13,6 +13,11 @@
     color: var(--color-scheme-text);
 }
 
+.taskItemText p {
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
 .checkboxWrapper {
     position: relative;
     width: 18px;
@@ -20,6 +25,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-shrink: 0;
 }
 
 .taskItemCheckbox {
