--- a/components/layout/Sidebar/Sidebar.module.css
+++ b/components/layout/Sidebar/Sidebar.module.css
@@ -132,7 +132,11 @@
 
 @media only screen and (min-width: 1440px) {
   .root {
-    width: 312px;
+    position: sticky;
+    top: 0;
+    left: auto;
+    height: 100vh;
+    min-width: 312px;
     border-right: 1px solid var(--color-scheme-border);
     transform: none;
     transition: none;
