--- a/components/tasks/AddTaskForm/AddTaskForm.module.css
+++ b/components/tasks/AddTaskForm/AddTaskForm.module.css
@@ -54,6 +54,7 @@
     display: flex;
     flex-direction: column;
     gap: 8px;
+    position: relative;
 }
 
 .addTaskInput label {
@@ -75,6 +76,8 @@
     font-size: 12px;
     line-height: 160%;
     color: var(--color-red);
+    position: absolute;
+    top: 75px;
 }
 
 .inputError {
