--- a/components/journey/BabyJourney/babyJourney.module.css
+++ b/components/journey/BabyJourney/babyJourney.module.css
@@ -140,4 +140,11 @@
   .fact_title {
     font-size: 16px;
   }
+
+  .text {
+    height: 48px;
+    overflow-x: hidden;
+    overflow-y: auto;
+    scrollbar-color: var(--color-scheme-accent) transparent;
+  }
 }
