--- a/styles/container.css
+++ b/styles/container.css
@@ -17,6 +17,7 @@
 /* Styles for Desktop devices */
 @media only screen and (min-width: 1440px) {
   .container {
-    max-width: 1440;
+    max-width: 1440px;
+    padding: 0;
   }
 }
