--- a/components/common/GreetingBlock/GreetingBlock.module.css
+++ b/components/common/GreetingBlock/GreetingBlock.module.css
@@ -1,24 +1,24 @@
-/* .title {
+.title {
   font-family: var(--second-family);
   font-weight: 700;
   letter-spacing: 0.01em;
-  line-height: 140%;
+  line-height: 1.4;
   color: var(--color-scheme-text);
   font-size: 24px;
   text-align: left;
 }
 
-@media (min-width: 768px) {
+/* @media (min-width: 768px) {
   .title {
-    font-size: 34px;
+    font-size: 24px;
   }
-}
+} */
 
 @media (min-width: 1440px) {
   .title {
     font-size: 32px;
   }
-} */
+}
 
 .title {
   margin-bottom: 16px;
