--- a/components/tasks/TasksReminderCard/TasksReminderCard.module.css
+++ b/components/tasks/TasksReminderCard/TasksReminderCard.module.css
@@ -33,32 +33,6 @@
     opacity: 1;
 }
 
-@media only screen and (min-width: 768px) {
-    .taskCard {
-        width: 704px;
-    }
-}
-
-@media only screen and (min-width: 1440px) {
-    .taskCard {
-        width: 390px;
-        height: 498px;
-    }
-
-    .tasksWrapper {
-        height: 395px;
-        overflow-x: hidden;
-        overflow-y: auto;
-        scrollbar-color: var(--color-scheme-accent) transparent;
-        padding-right: 8px;
-    }
-
-    .taskList {
-        height: auto;
-        overflow: visible;
-    }
-}
-
 .addTaskBtn {
     background-color: transparent;
     width: 40px;
@@ -66,6 +40,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    font-family: var(--font-family);
+
 }
 
 .addTaskBtnIcon {
@@ -86,15 +62,53 @@
 .taskCardTitle {
     font-family: var(--second-family);
     font-weight: 700;
-    font-size: 24px;
+    font-size: 20px;
     line-height: 140%;
     letter-spacing: 0.01em;
 }
 
 .subTitleTaskList {
     font-weight: 700;
-    font-family: var(--font-family);
-    font-size: 16px;
+    /* font-family: var(--font-family); */
+    font-size: 14px;
     line-height: 160%;
     color: var(--color-scheme-text);
+}
+
+@media only screen and (min-width: 768px) {
+    .taskCard {
+        width: 704px;
+    }
+}
+
+@media only screen and (min-width: 1440px) {
+    .taskCard {
+        width: 390px;
+        height: 498px;
+    }
+
+    .taskCardTitle {
+        font-style: 24px;
+    }
+
+    .tasksWrapper {
+        height: 395px;
+        overflow-x: hidden;
+        overflow-y: auto;
+        scrollbar-color: var(--color-scheme-accent) transparent;
+        padding-right: 8px;
+    }
+
+    .taskList {
+        height: auto;
+        overflow: visible;
+    }
+
+    .subTitleTaskList {
+        font-size: 16px;
+    }
+
+    /* .taskList>li>.addTaskBtn {
+        font-size: 16px;
+    } */
 }
